--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             font-family: "Open Sans", sans-serif;
             overflow-x: hidden;
             position: relative;
+            font-size: medium;
 
         }
 
